--- a/pages/views/index.ejs
+++ b/pages/views/index.ejs
@@ -32,11 +32,11 @@
       <li><a href="#home">Home</a></li> <!-- Since index page all options are in nav bar but different for each users login page-->
       <li><a href="#about">Search</a></li>
       <li><a href="#services">My Orders</a></li> <!-- get different permissions depending on user type for all the rest of these-->
-      <li><a href="#contact">View Cart</a></li>
-      <li><a href="#contact">View Orders</a></li>
-      <li><a href="#contact">Inventory</a></li>
-      <li><a href="#contact">Create Report</a></li>
-      <li><a href="#contact">Articles</a></li>
+      <li><a href="#cart">View Cart</a></li>
+      <li><a href="#orders">View Orders</a></li>
+      <li><a href="#inventory">Inventory</a></li>
+      <li><a href="#report">Create Report</a></li>
+      <li><a href="#article">Articles</a></li>
     </ul>
     
     <!-- Page content -->
