--- a/pages/views/signup.ejs
+++ b/pages/views/signup.ejs
@@ -1,20 +1,50 @@
 <html>
     <head>
         <title> Sign Up Page</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     </head>
     <body>
         <div class = "sign-up-form">
            <h1> Sign Up Now </h1>
-        <form> 
-            <input type="username" class = "input-box" placeholder = "Create Username">
-            <input type="password" class = "input-box" placeholder = "Create Password">
-            <p><span><input type = "checkbox"></span> I agree to the terms of services</p>
-            <button type = "button" class = "signup=btn">Sign up</button>
-            <hr>
-            <p class = "or">OR</p>
-            <button type = "button" class = "signup=btn">Login with existing account</button>
-        </form>  
+        <form id="signUp"> 
+            <input name="userName" type="username" class = "input-box" placeholder = "Create Username">
+            <input name="password" type="password" class = "input-box" placeholder = "Create Password">
+            <input name="FirstName" type="password" class = "input-box" placeholder = "Enter your first name">
+            <input name="LastName" type="password" class = "input-box" placeholder = "Enter your last name">
+            <div>
+                <label>Costumer</label>
+                <input name="Costumer" type="checkbox" />
+                <label>Supplier</label>
+                <input name="Supplier" type="checkbox" />
+                <label>Warehouse</label>
+                <input name="Warehouse" type="checkbox" />
+            </div>
+            <!-- <p><span><input required type = "checkbox"></span> I agree to the terms of services</p> -->
+            <button type="submit" class = "signup=btn">Sign up</button>
+        </form> 
+        <hr>
+        <p class = "or">OR</p>
+        <button type = "button" class = "signup=btn">Login with existing account</button> 
         </div>
-       
+       <script>
+        // for checkboxes
+        $('input[type="checkbox"]').on('change', function() {
+            $('input[type="checkbox"]').not(this).prop('checked', false);
+         });
+
+         // for post sign up
+         $('#signUp').submit( function(e) {
+            e.preventDefault()
+            $.ajax({
+                url: 'some-url',
+                type: 'post',
+                dataType: 'json',
+                data: $('#signUp').serialize(),
+                success: function(data) {
+                 
+            }
+            });
+        });
+       </script>
     </body>
 </html>
